<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.WelcomeScreen">

    <LinearLayout
        android:id="@+id/app_logo_name_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/logo_beansbay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/beans"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:fontFamily="@font/poppins_semibold"
            android:layout_gravity="center"
            android:textSize="32sp"
            />

        <TextView
            android:id="@+id/app_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greetings"
            android:fontFamily="@font/poppins_regular_2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_logo_name_greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_regular_2"
            android:textColor="@color/black"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:shadowColor="@color/black" />

        <Button
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular_2"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:shadowColor="@color/black"
            android:backgroundTint="#670404"
            android:padding="12dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>